# archetype

./: Cargo.toml  ]  h
src/: brush.rs  drawing.rs  geometry.rs  interactive.rs  main.rs  polygon.rs  polynomial.rs  state.rs
src/bezier/: fit.rs  fit_old.rs  mod.rs
src/brush/: mod.rs
src/brush/color/: mod.rs  solid.rs
src/gui/: cairo.rs  mod.rs  mode.rs  ui.rs
src/gui/mode/: buffered.rs  freedraw.rs  mod.rs  select.rs
src/render/: mod.rs
src/state/: data.rs  mod.rs
src/state/operations/: buffered.rs  mod.rs  polygonify.rs  rasterize.rs  select.rs
