[package]
name = "archetype"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.1"
cairo-rs = "0.9.0"
gio = "0.9.0"
glib = "0.10.0"
glib-sys = "0.10.0"
gtk = "0.9.0"
gtk-sys = "0.10.0"
image = { version = "0.23.7", default-features = false }
imageproc = "0.21.0"
lazy_static = "1"
nalgebra = "0.21.1"
num-traits = "0.2.12"
ordered-float = "2"
pathfinder_geometry = "0.5.1"
parking_lot = { version = "0.11.0", features = ["nightly", "deadlock_detection"] }
rayon = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
smallvec = { version = "1.4.1", features = ["const_generics", "union", "serde"] }

[profile.release]
lto = true
